# spark-utils

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-ecco.txt  requirements.txt  setup.py
.azuredevops/: build.yaml
.github/: CODEOWNERS
.github/workflows/: build.yaml  deploy.yaml  prepare_release.yaml  publish_dev_version.yaml  release.yaml
spark_utils/: _version.py
spark_utils/common/: __init__.py  functions.py  spark_job_args.py  spark_session_provider.py  spark_sql_utils.py  spark_udf.py
spark_utils/dataframes/: functions.py  models.py
spark_utils/dataframes/sets/: functions.py
spark_utils/delta_lake/: delta_log.py  functions.py
spark_utils/metrics/: azmon_metrics.py
spark_utils/models/: hive_metastore_config.py  hive_table.py  job_socket.py  k8s_config.py
src/: __init__.py
src/spark_utils/: .pylintrc  _version.py
src/spark_utils/common/: __init__.py  functions.py  spark_job_args.py  spark_session_provider.py  spark_sql_utils.py  spark_udf.py
src/spark_utils/dataframes/: __init__.py  functions.py  models.py
src/spark_utils/dataframes/sets/: functions.py
src/spark_utils/delta_lake/: functions.py
src/spark_utils/metrics/: azmon_metrics.py
src/spark_utils/models/: hive_metastore_config.py  hive_table.py  job_socket.py
test/: common.py  conftest.py  test_common_functions.py  test_dataframes_functions.py  test_delta_lake_functions.py  test_delta_log.py  test_metrics_service.py  test_spark_job_args.py  test_spark_session_provider.py
test/copy_dataframe_to_socket/: file-to-copy  file-to-copy-with-ts
test/copy_dataframe_to_socket/out-with-copy/: part-00000-fe95e6b6-3ffc-489c-b8fe-3344ee9b4d94-c000.json
test/delta_log/table1/: part-00000-295a0af4-1d98-43ae-adf9-bb5334199693-c000.snappy.parquet  part-00001-3f15a4e8-54c9-4bd4-be02-eee82e3d19d9-c000.snappy.parquet
test/delta_log/table2/: part-00000-be4fb270-112a-4ae9-9d56-db1e34984a4a-c000.snappy.parquet  part-00001-79db034f-d28b-44b8-a407-023b4caa63f9-c000.snappy.parquet
test/test_common_functions/: data.csv  data.json  data.parquet
test/test_common_functions/data.json/: .part-00000-bb567175-5033-450e-9815-a0d4ecdfdcc5-c000.json.crc  part-00000-bb567175-5033-450e-9815-a0d4ecdfdcc5-c000.json
