[tool.poetry]
name = "spark-utils"
version = "0.0.0"
description = "Utility classes for comfy Spark job authoriing."
authors = ["ECCO Sneaks & Data <esdsupport@ecco.com>"]
maintainers = ['GZU <gzu@ecco.com>', 'JRB <ext-jrb@ecco.com>']
license = 'MIT'
readme = "README.md"
repository = 'https://github.com/SneaksAndData/spark-utils'

[tool.poetry.dependencies]
python = "^3.9"
hadoop-fs-wrapper = "~0.5.2"
cryptography = ">=36.0,<38.1"
delta-spark = "~2.1.1"

kubernetes = { version = "24.2.0", optional = true }

[tool.poetry.extras]
k8s = [
    'kubernetes'
]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^2.12"
pylint = "^2.12"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
