[tool.poetry]
name = "spark-utils"
version = "0.0.0"
description = "Utility classes for comfy Spark job authoriing."
authors = ["ECCO Sneaks & Data <esdsupport@ecco.com>"]
maintainers = ['GZU <gzu@ecco.com>', 'JRB <ext-jrb@ecco.com>']
license = 'MIT'
readme = "README.md"
repository = 'https://github.com/SneaksAndData/spark-utils'

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
hadoop-fs-wrapper = "~0.7"
cryptography = "^36"
delta-spark = "~3.2.1"
backoff = "~2.2"

kubernetes = { version = "31.0.0", optional = true }

[tool.poetry.extras]
k8s = [
    'kubernetes'
]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3"
pylint = "^3"
black = "^23"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
